--- a/css/secao-meus-jogos.css
+++ b/css/secao-meus-jogos.css
@@ -13,7 +13,7 @@
     border-radius: 25px;
     background-color: #2A2634;
     width: 580px;
-    height: 300px;
+    height: auto;
 }
 
 .titulo-meus-jogos {
