--- a/css/secao-meus-jogos.css
+++ b/css/secao-meus-jogos.css
@@ -1,8 +1,8 @@
 .secao-meus-jogos {
     background: linear-gradient(45deg, #9572FC, #43E7AD, #E2D45C);
     width: 580px;
-    height: 300px;
-    border-radius: 25px;
+    height: auto;
+    border-radius: 28px;
     padding-top: 5px;
     margin: 0 auto; 
     margin-top: 25px;
